--- a/admin/css/btc-paywall-admin.css
+++ b/admin/css/btc-paywall-admin.css
@@ -202,6 +202,9 @@ td.Settled {
   line-height: 1.75;
   letter-spacing: 0.05em;
 }
+.btcpw_expanded_notice p {
+  font-size: 10px;
+}
 .btcpw_general_settings,
 .tipping_box_settings,
 .tipping_banner_high_settings,
