Fix problem with fetching data from database

--- a/admin/css/btc-paywall-admin.css
+++ b/admin/css/btc-paywall-admin.css
@@ -259,3 +259,7 @@ div.btcpw_help_link a:hover {
 #btcpw_btcpay_store_id {
   width: 60%;
 }
+#btcpw_expanded_notice_split {
+  display: flex;
+  gap: 30px;
+}
