--- a/admin/css/btc-paywall-admin.css
+++ b/admin/css/btc-paywall-admin.css
@@ -138,7 +138,10 @@ td.Settled {
 .tipping_banner_wide_settings label,
 .tipping_banner_wide_settings textarea,
 .tipping_page_settings label,
-.tipping_page_settings textarea {
+.tipping_page_settings textarea,
+#btcpw_pay_per_post_paywall label,
+#btcpw_pay_per_view_paywall label,
+#btcpw_pay_per_file_paywall label {
   display: inline-block;
   vertical-align: middle;
 }
@@ -209,7 +212,10 @@ td.Settled {
 .tipping_box_settings,
 .tipping_banner_high_settings,
 .tipping_banner_wide_settings,
-.tipping_page_settings {
+.tipping_page_settings,
+#btcpw_pay_per_post_paywall,
+#btcpw_pay_per_view_paywall,
+#btcpw_pay_per_file_paywall {
   border: 1px solid #1e1e1e;
   background: #fff;
   padding: 0;
@@ -291,4 +297,72 @@ div.btcpw_help_link a:hover {
 
 #sc_menu div:hover {
   background-color: #007bff;
+}
+
+#btcpw_pay_per_post_paywall,
+#btcpw_pay_per_view_paywall,
+#btcpw_pay_per_file_paywall {
+  display: flex;
+}
+
+#btcpw_pay_per_post_paywall > :first-child,
+#btcpw_pay_per_view_paywall > :first-child,
+#btcpw_pay_per_file_paywall > :first-child {
+  flex: 1;
+}
+#btcpw_pay_per_post_paywall :nth-of-type(2),
+#btcpw_pay_per_view_paywall :nth-of-type(2),
+#btcpw_pay_per_file_paywall :nth-of-type(2) {
+  flex: 1;
+}
+/*Paywall preview*/
+.btcpw_pay_preview {
+  background-color: #ecf0f1;
+  padding: 30px;
+}
+
+.btcpw_pay__content_preview,
+.btcpw_pay__preview_preview {
+  text-align: center;
+}
+
+.btcpw_pay__footer_preview {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin-top: 20px;
+}
+#btcpw_pay__button_preview {
+  background: #f6b330;
+  border-radius: 0.25rem;
+  color: white;
+  font-size: 1.2rem;
+  line-height: 1.2;
+  padding: 0.5rem 0.5rem;
+  margin: 0.25rem;
+  cursor: pointer;
+}
+
+.btcpw_help_preview > a.btcpw_help__link_preview {
+  margin-top: 5px;
+  color: #2980b9;
+  text-decoration: underline;
+}
+
+.btcpw_pay__content_preview p {
+  margin-top: 20px;
+  font-size: 1.1em;
+}
+.btcpw_pay__footer_preview div.btcpw_help_preview {
+  margin-top: 3em;
+}
+
+#btcpw_pay_per_post_paywall_preview,
+#btcpw_pay_per_view_paywall_preview,
+#btcpw_pay_per_file_paywall_preview {
+  display: flex;
+  align-items: center;
+}
+.btcpw__paywall_submit_button {
+  margin-top: 50px;
 }
