Modify functions in order to support new settings

--- a/public/css/btc-paywall-public.css
+++ b/public/css/btc-paywall-public.css
@@ -1,6 +1,9 @@
 .btcpw_pay {
   background-color: #ecf0f1;
   padding: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 .btcpw_pay__preview {
   display: flex;
