--- a/admin/css/btc-paywall-admin.css
+++ b/admin/css/btc-paywall-admin.css
@@ -305,16 +305,16 @@ div.btcpw_help_link a:hover {
   display: flex;
 }
 
-#btcpw_pay_per_post_paywall > :first-child,
-#btcpw_pay_per_view_paywall > :first-child,
-#btcpw_pay_per_file_paywall > :first-child {
+#btcpw_pay_per_post_paywall > div,
+#btcpw_pay_per_view_paywall > div,
+#btcpw_pay_per_file_paywall > div {
   flex: 1;
 }
-#btcpw_pay_per_post_paywall :nth-of-type(2),
+/* #btcpw_pay_per_post_paywall :nth-of-type(2),
 #btcpw_pay_per_view_paywall :nth-of-type(2),
 #btcpw_pay_per_file_paywall :nth-of-type(2) {
   flex: 1;
-}
+} */
 /*Paywall preview*/
 .btcpw_pay_preview {
   background-color: #ecf0f1;
@@ -384,6 +384,7 @@ div.btcpw_help_link a:hover {
 .btcpw_pay__preview_preview {
   display: flex;
   justify-content: space-around;
+  align-items: center;
 }
 .btcpw_pay__preview_preview.preview_img {
   width: 200px;
@@ -393,9 +394,17 @@ div.btcpw_help_link a:hover {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: stretch;
 }
 .btcpw_pay__preview_preview.preview_img img {
   width: 100%;
   height: 100%;
+}
+.btcpw_pay__loading_preview {
+  display: none;
+}
+.btcpw_pay_preview {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
